<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oneplus Tools</string>
    <string name="modem">Modem</string>
    <string name="flash_chinaunicom">Flash China Unicom</string>
    <string name="flash_chinaunicom_summary"></string>
    <string name="flash_chinaunicom_confirm">Are you sure you flash ChinaUnicom Modem?</string>
    <string name="flash_chinamobile">Flash China Mobile</string>
    <string name="flash_chinamobile_summary"></string>
    <string name="flash_chinamobile_confirm">Are you sure you flash ChinaMobile Modem?</string>
    <string name="modem_settings">Modem Settings</string>
    <string name="modem_settings_summary"></string>
    <string name="about">About</string>
    <string name="version">Oneplus Tools 1.4</string>
    <string name="version_summary">© Oneplus Tools | Powered by Xs</string>
    <string name="confirm">Confirm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="power">Power</string>
    <string name="power_shutdown">Shutdown</string>
    <string name="power_shutdown_summary"></string>
    <string name="power_shutdown_confirm">Are you sure you power off your phone?</string>
    <string name="power_reboot">Reboot</string>
    <string name="power_reboot_summary"></string>
    <string name="power_reboot_confirm">Are you sure you reboot your phone?</string>
    <string name="power_reboot_recovery">Recovery</string>
    <string name="power_reboot_recovery_summary"></string>
    <string name="power_reboot_recovery_confirm">Are you sure you reboot into recovery mode?</string>
    <string name="power_reboot_bootloader">Fastboot</string>
    <string name="power_reboot_bootloader_summary"></string>
    <string name="power_reboot_bootloader_confirm">Are you sure you reboot into Fastboot mode?</string>
    <string name="flash_rom">Flash</string>
    <string name="flash_boot">Flash Boot</string>
    <string name="flash_boot_summary">Will need to brush into the kernel boot.img renamed and placed in the SD card OneplusTools / Flash directory, and then click on the brush into the</string>
    <string name="flash_boot_confirm">Are you sure you brush into the kernel? (Make sure you have the need to brush into the kernel boot.img renamed and placed in the SD card OneplusTools / Flash directory)</string>
    <string name="flash_color_recovery">Flash Color Recovery</string>
    <string name="flash_color_recovery_summary"></string>
    <string name="flash_other_recovery">Flash Other Recovery</string>
    <string name="flash_color_recovery_confirm">Are you sure you brush the Color Recovery?</string>
    <string name="flash_other_recovery_summary">Will need to brush into the Recovery renamed recovery.img and placed in the SD card OneplusTools / Flash directory, and then click on the brush into the</string>
    <string name="flash_other_recovery_confirm">Are you sure you brush into Other Recovery? (Make sure you have the need to brush into the Recovery renamed recovery.img and placed in the SD card OneplusTools / Flash directory)</string>    
    <string name="welcome">Welcome to use OneplusTools</string>
    <string name="sound">Sound</string>
    <string name="flash_backup">Backup</string>
    <string name="flash_backup_ok">Successful</string>
    <string name="flash_backup_recovery">Backup Recovery</string>
    <string name="flash_backup_recovery_summary">Backup Recovery To /sdcard/Oneplustools/Backup</string>
    <string name="flash_backup_recovery_confirm">Are you sure you back up your current Recovery? (Will backup to SD card OneplusTools / Backup directory)</string>
    <string name="flash_backup_modem">Backup Modem</string>
    <string name="flash_backup_modem_summary">Backup Modem To /sdcard/Oneplustools/Backup</string>
    <string name="flash_backup_modem_confirm">Are you sure you back up your current modem? (Will backup to SD card OneplusTools / Backup directory)</string>
    <string name="flash_backup_boot">Backup Boot</string>
    <string name="flash_backup_boot_summary">Backup Boot To /sdcard/Oneplustools/Backup</string>
    <string name="flash_backup_boot_confirm">Are you sure you back up your current kernel? (Will backup to SD card OneplusTools / Backup directory)</string>
    <string name="camera_sound">Camera</string>
    <string name="record_sound">Record</string>
    <string name="focus_sound">Focus</string>
    <string name="camera_sound_summary_off">Off</string>
    <string name="camera_sound_summary_on">On</string>
    <string name="record_sound_summary_off">Off</string>
    <string name="record_sound_summary_on">On</string>
    <string name="focus_sound_summary_off">Off</string>
    <string name="focus_sound_summary_on">On</string>
    <string name="camera">Camera</string>
    <string name="author">Xs</string>
    <string name="author_summary">Sina Weibo</string>
    <string name="changelog">Change Log</string>
    <string name="changelog_summary"></string>
    <string name="qq_group">QQ Group</string>
    <string name="qq_group_summary">333932217</string>
    <string name="gesture">Gesture</string>
    <string name="gesture_warning">Warning</string>
    <string name="gesture_warning_summary">To ensure that the function will not restart failure gesture, please join boot from Kai Toolbox</string>
    <string name="double_tap_to_wake">Doublt Tap</string>
    <string name="double_tap_to_wake_summary_off">Off</string>
    <string name="double_tap_to_wake_summary_on">On</string>
    <string name="camera_gesture">Camera</string>
    <string name="camera_gesture_summary_off">Off</string>
    <string name="camera_gesture_summary_on">On</string>
    <string name="music_gesture">Music</string>
    <string name="music_gesture_summary_off">Off</string>
    <string name="music_gesture_summary_on">On</string>
    <string name="check_for_update">Check Update</string>
    <string name="check_for_update_yes">Find New Update</string>
    <string name="check_for_update_no">No Update</string>
    <string name="check_for_update_timeout">Timeout</string>
    <string name="loading">Loading...</string>
    <string name="a0001">Your Phone is not Oneplus One,program will exit!</string>
    <string name="tab_about">About</string>
    <string name="tab_power">Power</string>
    <string name="tab_sound">Sound</string>
    <string name="tab_modem">Modem</string>
    <string name="tab_flash">Flash</string>
    <string name="tab_gesture">Gesture</string>

</resources>