<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:summary="@string/author_summary"
        android:title="@string/author" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://weibo.com/acexs" />
    </PreferenceScreen>
    <PreferenceScreen
        android:summary="@string/changelog_summary"
        android:title="@string/changelog" >
        <intent
            android:targetPackage="com.xs.oneplustools"
            android:targetClass="com.xs.oneplustools.activity.ChangeLogActivity" ></intent>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="check_for_update"
        android:title="@string/check_for_update">
    </PreferenceScreen>
    <PreferenceScreen
        android:enabled="false"
        android:summary="@string/qq_group_summary"
        android:title="@string/qq_group" >
    </PreferenceScreen>
    <PreferenceScreen
        android:enabled="false"
        android:summary="@string/version_summary"
        android:title="@string/version" >
    </PreferenceScreen>

</PreferenceScreen>